--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -28,7 +28,17 @@
     <string name="error_missing_start_date_param">ไม่มีวันเริ่มเดินทาง</string>
     <!-- Error messge for missing End date date in search form -->
     <string name="error_missing_end_date_param">ไม่มีวันสิ้นสุดการเดินทาง</string>
-
+    <!-- Temporary String for general error message -->
+    <string name="error_car">เกิดข้อผิดพลาด ตรวจสอบพารามิเตอร์ที่ใช้ค้นหา</string>
+    <!-- Checkout -->
+    <!-- Desk & vehicle at terminal -->
+    <string name="desk_and_vehicle_terminal">เคาน์เตอร์และรถอยู่ที่อาคารผู้โดยสาร</string>
+    <!-- Unlimited mileage -->
+    <string name="unlimited_mileage">ไม่จำกัดไมล์</string>
+    <!-- Checkout confirmation message (temporary) -->
+    <string name="successful_checkout_TEMPLATE">จองสำเร็จแล้ว! หมายเลขแผนการเดินทาง: %1$s</string>
+    <!-- Error message for some missing checkout params -->
+    <string name="error_missing_checkout_params">พารามิเตอร์ขาดหายไป</string>
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">ป้อนปลายทางของคุณ</string>
@@ -137,6 +147,8 @@
     <string name="tablet_search_results_hotels_unavailable_tonight">ขออภัย ไม่มีโรงแรมว่าง\nสำหรับคืนนี้</string>
     <!-- Tablet search results, no flights available -->
     <string name="tablet_search_results_flights_unavailable">ขออภัย ไม่มีเที่ยวบินว่าง\nในขณะนี้</string>
+    <!-- Tablet search results, no flights available due to invalid start date -->
+    <string name="flight_search_range_error_TEMPLATE">ขออภัย เราไม่สามารถค้นหาเที่ยวบินล่วงหน้าจากวันนี้เกิน %1$s วันได้</string>
     <!-- Remove Trip Bucket Flight - Undo messaging -->
     <string name="tablet_tripbucket_item_removed">นำออก</string>
     <!-- Label indicating how many items are being booked for the current trip -->
@@ -314,6 +326,8 @@
     <string name="unable_to_log_into_facebook">ไม่สามารถเข้าสู่ระบบ Facebook</string>
     <!-- Login failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="login_failed_try_again">เข้าสู่ระบบไม่สำเร็จ หากอีเมลและรหัสผ่านของคุณถูกต้อง โปรดตรวจสอบให้แน่ใจว่าการตั้งค่าประเทศในแอพของคุณถูกต้อง</string>
+    <!-- User needs to reset password -->
+    <string name="login_reset_password">เราต้องการให้คุณสร้างบัญชีใหม่เพื่อใช้เข้าสู่ระบบเว็บไซต์เอ็กซ์พีเดียทั่วโลก\nโปรดตั้งรหัสผ่านของคุณใหม่ โดยคลิกที่ลิงก์ ‘ลืมรหัสผ่าน?\&apos; ด้านล่าง</string>
     <!-- Facebook connect expedia password hint -->
     <string name="expedia_password_hint">รหัสผ่านเอ็กซ์พีเดีย</string>
     <!-- Link accounts -->
@@ -653,71 +667,6 @@
     <string name="add_hotel_fallback">เพิ่มโรงแรมที่จุดหมายปลายทางของคุณ</string>
     <!-- Button label to add a hotel in the air attach case. -->
     <string name="add_hotel_air_attach">เพิ่มโรงแรม</string>
-
-
-    <!-- Itin Local Expert.  Do not translate the "Local Expert" part because it is the title of a product. -->
-    <string name="talk_to_local_expert">คุยกับ Local Expert</string>
-
-    <!-- Local Expert Sites -->
-    <!-- Name of Hawaii (for local expert) -->
-    <string name="site_hawaii">ฮาวาย</string>
-    <!-- Name of Orlando, FL (for local expert) -->
-    <string name="site_orlando">ออร์แลนโด</string>
-    <!-- Name of Las Vegas (for local expert) -->
-    <string name="site_las_vegas">ลาสเวกัส</string>
-
-    <!-- Template for the city title on Local Expert pages. %1$s is the name of the city -->
-    <string name="local_expert_title_TEMPLATE">ขอให้สนุกใน%1$s</string>
-    <!-- Description body for the Local Expert pages.    Do not translate the "Local Expert" part because it is the title of a product. -->
-    <string name="local_expert_description">เจ้าหน้าที่ Local Expert พร้อมให้ความช่วยเหลือ\nในการวางแผนทริปของคุณ</string>
-    <!-- Text for the button on Local Expert pages, to call the concierge -->
-    <string name="local_expert_call_button_text">โทรหาพวกเขา</string>
-
-    <!-- Local Expert attractions; these are all split into two lines (second line is bolded) -->
-    <!-- First half of phrase about local expert beaches attraction.  Full phrase: "Amazing creatures" -->
-    <string name="attraction_creatures_first">ตื่นตากับ</string>
-    <!-- Second half of phrase about local expert beaches attraction.  Full phrase: "Amazing creatures" -->
-    <string name="attraction_creatures_second">สัตว์นานาชนิด</string>
-    <!-- First half of phrase about local expert theme parks attraction.  Full phrase: "See the best theme parks" -->
-    <string name="attraction_theme_parks_first">เที่ยวชม</string>
-    <!-- Second half of phrase about local expert theme parks attraction.  Full phrase: "See the best theme parks" -->
-    <string name="attraction_theme_parks_second">สวนสนุก</string>
-    <!-- First half of phrase about local expert beaches attraction.  Full phrase: "Find the best beaches" -->
-    <string name="attraction_beaches_first">ค้นหา</string>
-    <!-- Second half of phrase about local expert beaches attraction.  Full phrase: "Find the best beaches" -->
-    <string name="attraction_beaches_second">หาดทราย</string>
-    <!-- First half of phrase about local expert helicopter attraction.  Full phrase: "Ride in a helicopter" -->
-    <string name="attraction_helicopter_first">นั่ง</string>
-    <!-- Second half of phrase about local expert helicopter attraction.  Full phrase: "Ride in a helicopter" -->
-    <string name="attraction_helicopter_second">เฮลิคอปเตอร์</string>
-    <!-- First half of phrase about local expert scuba diving attraction.  Full phrase: "Jump in & go scuba diving" -->
-    <string name="attraction_scuba_first">ดำดิ่ง</string>
-    <!-- Second half of phrase about local expert scuba diving attraction.  Full phrase: "Jump in & go scuba diving" -->
-    <string name="attraction_scuba_second">ท่องโลกใต้ทะเล</string>
-    <!-- First half of phrase about local expert casinos attraction.  Full phrase: "World class casinos" -->
-    <string name="attraction_casinos_first">เสี่ยงโชคใน</string>
-    <!-- Second half of phrase about local expert casinos attraction.  Full phrase: "World class casinos" -->
-    <string name="attraction_casinos_second">คาสิโน</string>
-    <!-- First half of phrase about local expert ferrari attraction.  Full phrase: "Drive a ferrari" -->
-    <string name="attraction_ferrari_first">ขับ</string>
-    <!-- Second half of phrase about local expert ferrari attraction.  Full phrase: "Drive a ferrari" -->
-    <string name="attraction_ferrari_second">เฟอร์รารี</string>
-    <!-- First half of phrase about local expert family activities attraction.  Full phrase: "Activities for families" -->
-    <string name="attraction_family_first">กิจกรรมสำหรับ</string>
-    <!-- Second half of phrase about local expert family activities attraction.  Full phrase: "Activities for families" -->
-    <string name="attraction_family_second">ครอบครัว</string>
-    <!-- First half of phrase about local expert food attraction.  Full phrase: "Experience great food" -->
-    <string name="attraction_food_first">ลิ้มลอง</string>
-    <!-- Second half of phrase about local expert food attraction.  Full phrase: "Experience great food" -->
-    <string name="attraction_food_second">อาหารอร่อย</string>
-    <!-- First half of phrase about local expert entertainment attraction.  Full phrase: "Find the best entertainment" -->
-    <string name="attraction_entertainment_first">ค้นหา</string>
-    <!-- Second half of phrase about local expert entertainment attraction.  Full phrase: "Find the best entertainment" -->
-    <string name="attraction_entertainment_second">ความบันเทิงชั้นยอด</string>
-    <!-- First half of phrase about local expert local music attraction.  Full phrase: "Find local music" -->
-    <string name="attraction_music_first">ตามหา</string>
-    <!-- Second half of phrase about local expert local music attraction.  Full phrase: "Find local music" -->
-    <string name="attraction_music_second">วงดนตรีเจ๋งๆ</string>
 
     <!-- Car category -->
     <!-- Car category: mini -->
@@ -1401,6 +1350,8 @@
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
     <string name="credit_card_hint">หมายเลขบัตรเครดิต</string>
+    <!-- Security code (CVV) hint -->
+    <string name="cvv_hint">หมายเลข CVV</string>
     <!-- Expiration date label -->
     <string name="expiration_date">วันหมดอายุ</string>
     <!-- Set expiration date button -->
@@ -1457,6 +1408,8 @@
     <string name="middle_name">ชื่อกลาง</string>
     <!-- Last name label -->
     <string name="last_name">นามสกุล</string>
+    <!-- First and Last Name label -->
+    <string name="first_and_last_name">ชื่อและนามสกุล</string>
     <!-- date of birth label -->
     <string name="date_of_birth">วันเกิด</string>
     <!-- male -->
@@ -1920,6 +1873,8 @@
     <string name="bullet_point">•</string>
     <!-- Label for button that lets the user complete the booking through the normal flow -->
     <string name="book_now">จองเลย</string>
+    <!-- Label for button that lets the user complete the booking through the normal flow -->
+    <string name="book_now_ab_test">เลือกห้อง</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">จองทางโทรศัพท์</string>
 
